--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 .todo{
     width: 100%;
-    max-width: 540px;
+    max-width: 50%;
     min-width: 340px;
     background: #fff;
     margin: 100px auto 20px;
